# gen-chords

./: .gitignore  README.md  gen_anki_pkg.py  gen_chord_images.py  main.py  pyproject.toml
assets/: chord_images.apkg
assets/anki_packages/: seventh_chords.apkg
src/gen_chords/: utils.py
src/gen_chords/scripts/: gen_anki_pkg.py  gen_chord_images.py
