[project]
name = "gen-chords"
version = "1.0.1"
description = "Generates PNG images and flashcards of chords."
authors = [{ name = "Valter Schütz", email = "valterschutz@proton.me" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "genanki>=0.13.1",
    "pymusictheory==2.2.1",
    "tqdm>=4.67.1",
]
classifiers = [
    "Topic :: Artistic Software",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]
[project.urls]
Homepage = "https://github.com/valterschutz/gen-chords"

[project.scripts]
gen_anki_pkg = "gen_chords.scripts.gen_anki_pkg:entry"
gen_chord_images = "gen_chords.scripts.gen_chord_images:entry"

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gen_chords"]
